--- a/app/views/layouts/_admin_dropdown.html.erb
+++ b/app/views/layouts/_admin_dropdown.html.erb
@@ -53,7 +53,7 @@
         <%= link_to 'Voteringar', admin_votes_path %>
       </li>
     <% end %>
-    <% if can? :manage, Vote %>
+    <% if can? :manage, VoteUser %>
       <li class="dropdown-submenu">
         <%= link_to 'Mötesanvändare', admin_vote_users_path %>
       </li>
