--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,16 +19,9 @@
 
       <div class="col-md-4 col-sm-12">
         <div class="headline">
-          <%= content_tag(:h2, t('vecktorn.title')) %>
+          <h2>Ledigt utrymme</h2>
         </div>
-        <%=render 'contacts/contact', name: 'Sanningsministeriet' %>
         </p>
-        <hr>
-        <div class="headline">
-          <%= content_tag(:h3, t('footer.stay_connected')) %>
-        </div>
-        <br>
-        <br>
       </div>
 
       <div class="col-md-3 col-sm-12">
