--- a/app/views/admin/votes/index.html.erb
+++ b/app/views/admin/votes/index.html.erb
@@ -13,7 +13,7 @@
       link_to v.title, admin_vote_path(v)
     end
     grid.column name: t('vote.open'), attribute: 'open' do |v|
-      v.open ? t('yes') : t('no')
+      yes_no(v.open)
     end
     grid.column name: t('vote.open_close') do |v|
       link_to (v.open ? t('vote.do_close') : t('vote.do_open')), change_state_admin_vote_path(v)
