--- a/app/views/admin/votes/index.html.erb
+++ b/app/views/admin/votes/index.html.erb
@@ -3,8 +3,8 @@
 </div>
 <div class="col-md-12">
   <%= link_to t('vote.new_vote'), new_admin_vote_path, class: 'btn primary' %>
-  <% if can? :manage, VoteUser %>
-    <%= link_to t('vote_user.manage'), admin_vote_users_path, class: 'btn secondary' %>
+  <% if can? :manage, User %>
+    <%= link_to t('user.manage'), admin_users_path, class: 'btn secondary' %>
   <% end %>
 </div>
 <div class="col-md-12">
