--- a/app/views/admin/vote_users/_form.html.erb
+++ b/app/views/admin/vote_users/_form.html.erb
@@ -1,9 +1,8 @@
-<%= simple_form_for [:admin, @vote_user] do |f| %>
-  <%= f.input :name %>
-  <%= f.input :present, as: :boolean, default: true %>
+<%= simple_form_for [:admin, @user] do |f| %>
+  <%= f.input :presence, as: :boolean %>
   <%= f.input :votecode, readonly: true %>
   <div class="table">
-    <%= f.button :submit, class: 'btn primary' %>
+    <%= f.button :submit %>
     <%= link_to t('vote_user.manage'), admin_vote_users_path, class: 'btn secondary' %>
   </div>
 <% end %>
