--- a/app/views/admin/vote_users/edit.html.erb
+++ b/app/views/admin/vote_users/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="col-md-6 col-md-offset-3 col-sm-12 reg-page">
   <div class="headline">
-    <h2><%= t('vote_user.new2') %></h2>
+    <h2><%= t('vote_user.edit2') %></h2>
   </div>
+
   <%= render 'form' %>
 </div>
