VotePosts now link to Users by User ID. Fixing some views

--- a/app/views/admin/votes/show.html.erb
+++ b/app/views/admin/votes/show.html.erb
@@ -11,6 +11,10 @@
       <td><%= t('vote.status') %></td>
       <td><%= @vote.open ? t('vote.open') : t('vote.closed') %></td>
     </tr>
+    <tr>
+      <td><%= t('vote.number_of_votes') %></td>
+      <td><%= @vote.vote_posts.count %></td>
+    </tr>
   </table>
   <% if @vote.open %>
     <i><%= t('vote.still_open') %></i><p><p>
