--- a/app/views/vote_posts/new.html.erb
+++ b/app/views/vote_posts/new.html.erb
@@ -5,9 +5,9 @@
   <%= simple_form_for [@vote, @vote_post] do |f| %>
     <h3><%= @vote.title %></h3>
     <%= f.input :votecode %>
-    <%= f.input :vote_option_id, collection: @vote.vote_options, include_blank: false %>
+    <%= f.input :vote_option_id, collection: @vote.vote_options.order(:title), include_blank: false %>
     <div class="table">
-      <%= f.button :submit, t('vote.submit'), label: 'Rösta!' %>
+      <%= f.button :submit, t('vote.submit') %>
       <%= link_to t('actions.back'), votes_path, class: 'btn secondary' %>
     </div>
   <% end %>
