--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@menu) do |f| %>
-  <%= f.input :location, collection: [[t('menu.guild'), :guild], [t('menu.members'), :members], [t('menu.companies'), :companies], [t('menu.contact'), :contact]] %>
+  <%= f.input :location, collection: [[t('menu.info'), :info], [t('menu.voting'), :voting], [t('menu.contact'), :contact]] %>
   <%= f.input :index %>
   <%= f.input :name %>
   <%= f.input :link %>
