--- a/app/views/admin/vote_users/index.html.erb
+++ b/app/views/admin/vote_users/index.html.erb
@@ -2,18 +2,17 @@
   <h2><%= t('vote_user.administrate') %></h2>
 </div>
 <div class="col-md-12">
-  <%= link_to t('vote_user.new'), new_admin_vote_user_path, class: 'btn primary' %>
   <% if can? :manage, Vote %>
     <%= link_to t('vote.manage'), admin_votes_path, class: 'btn secondary' %>
   <% end %>
   <%= link_to(t('vote_user.make_all_not_present'), make_all_not_present_admin_vote_users_path,
-              class: 'btn secondary',
+              method: :patch, class: 'btn secondary',
               data: {confirm: t('vote_user.confirm_all_not_present')}) %>
 </div>
 <div class="col-md-12">
   <%= grid(@vote_users_grid) do |grid|
     grid.column name: t('attributes.name'), attribute: 'firstname' do |user|
-      user_link(user)
+      link_to user, admin_vote_user_path(user)
     end
     grid.column name: User.human_attribute_name(:votecode), attribute: 'votecode'
     grid.column name: User.human_attribute_name(:presence), attribute: 'presence' do |user|
@@ -21,14 +20,14 @@
     end
     grid.column name: t('user.change_state') do |user|
       link_to(user.presence ? t('user.make_not_present') : t('vote_user.make_present'),
-              change_state_admin_vote_user_path(user))
+              change_state_admin_vote_user_path(user), method: :patch)
     end
     grid.column name: t('edit') do |user|
       link_to(t('edit'), edit_admin_vote_user_path(user))
     end
     grid.column name: t('vote_user.reset_votecode') do |user|
       link_to t('vote_user.reset'), new_votecode_admin_vote_user_path(user),
-                data: {confirm: t('vote_user.confirm_reset')}
+                method: :patch, data: {confirm: t('vote_user.confirm_reset')}
     end
   end -%>
 </div>
