--- a/app/views/admin/votes/_vote_option_fields.erb
+++ b/app/views/admin/votes/_vote_option_fields.erb
@@ -1,5 +1,4 @@
-<div class="nested-fields">
-  <div class="form-group">
+<div class="nested-fields panel-body">
     <%= f.input :title, required: true %>
-  </div>
+    <%= link_to_remove_association t('destroy'), f, class: 'btn danger' %>
 </div>
