--- a/app/views/layouts/_admin_dropdown.html.erb
+++ b/app/views/layouts/_admin_dropdown.html.erb
@@ -11,7 +11,7 @@
         <%= link_to(t(:admin), nil) %>
         <ul class="dropdown-menu">
           <li><%= link_to(models_name(User), admin_users_path) %></li>
-          <li><%= link_to(models_name(Menu), menus_path) %></li>
+          <li><%= link_to(models_name(Menu), admin_menus_path) %></li>
           <li><%= link_to(models_name(Constant), constants_path) %></li>
           <li><%= link_to(models_name(Permission), admin_permission_users_path) %></li>
         </ul>
