--- a/app/views/vote_posts/new.html.erb
+++ b/app/views/vote_posts/new.html.erb
@@ -4,8 +4,10 @@
   </div>
   <%= simple_form_for [@vote, @vote_post] do |f| %>
     <h3><%= @vote.title %></h3>
+    <p><i><%= t('vote_post.max_choices', choices: @vote.choices) %></i></p>
     <%= f.input :votecode %>
-    <%= f.input :vote_option_id, collection: @vote.vote_options.order(:title), include_blank: false %>
+    <%= f.input :vote_option_ids, collection: @vote.vote_options.order(:title), include_blank: false,
+                input_html: { class: 'select2', multiple: true }, include_hidden: false, required: true %>
     <div class="table">
       <%= f.button :submit, t('vote.submit') %>
       <%= link_to t('actions.back'), votes_path, class: 'btn secondary' %>
