Updating header background picture

--- a/app/assets/stylesheets/partials/_start_page.scss
+++ b/app/assets/stylesheets/partials/_start_page.scss
@@ -3,7 +3,7 @@
   max-height: 500px;
 
   h1 {
-    background: rgba($main-color, 0.75);
+    background: rgba($fsek-pi-silver, 0.25);
     color: $white;
     display: inline-block;
     margin: 240px 0 0;
