--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,7 +4,7 @@
       <div class="item active">
         <div class="start-background">
           <div class="container">
-            <h1><%= t('front.welcome') %></h1>
+            <h1><%= t('front.welcome') %></h1><br>
             <p><%= t('front.below_welcome') %></p>
           </div>
         </div>
