--- a/app/views/admin/votes/show.html.erb
+++ b/app/views/admin/votes/show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3 col-sm-12 reg-page">
+<div class="col-md-10 col-md-offset-1 col-sm-1+ col-sm-offset-1 reg-page">
   <div class="headline">
     <h2><%= t('vote.show_title') + ' – ' + @vote.title %></h2>
   </div>
@@ -37,6 +37,24 @@
       <% end %>
     </table>
   <% end %>
+  <%= grid(@grid) do |grid|
+    grid.column name: t('log.type'), attribute: 'auditable_type', custom_filter: vote_filter do |a|
+      Audit.human_attribute_name(a.auditable_type)
+    end
+    grid.column name: t('log.action'), attribute: 'action', filter: false do |a|
+      User.human_attribute_name(a.action)
+    end
+    grid.column name: t('log.change'), attribute: 'audited_changes', filter: false do |a|
+      split_audit_hashes(a.audited_changes, Vote)
+    end
+    grid.column name: model_name(User), assoc: :user, attribute: 'firstname', filter: false do |a|
+      a.user
+    end
+    grid.column name: t('log.updated_by'), assoc: :updater, attribute: 'firstname', filter: false do |a|
+      a.updater
+    end
+    grid.column name: t('log.date'), attribute: 'created_at', filter: false
+  end -%>
   <%= link_to t('vote.edit_vote'), edit_admin_vote_path(@vote), class: 'btn primary' %>
   <%= link_to t('vote.admin_votes'), admin_votes_path, class: 'btn secondary' %>
 </div>
