--- a/app/views/admin/news/edit.html.erb
+++ b/app/views/admin/news/edit.html.erb
@@ -7,7 +7,7 @@
   <%= link_to(t(:show_attr, attr: model_name(News)),
               news_path(@news), class: 'btn secondary') %>
   <%= link_to(t(:destroy_attr, attr: model_name(News)),
-              news_path(@news), method: :delete,  class: 'btn danger') %>
+              admin_news_path(@news), method: :delete,  class: 'btn danger') %>
   <%= link_to(t(:index_attr, attr: models_name(News)),
-              news_index_path(@news), class: 'btn secondary') %>
+              admin_news_index_path, class: 'btn secondary') %>
 </div>
