--- a/app/views/news/_news.html.erb
+++ b/app/views/news/_news.html.erb
@@ -1,10 +1,5 @@
 <div class="news">
-  <h4>
-    <%= link_to(news, news_path(news)) %>
-    <% if news.image.present? %>
-      <%= fa_icon('image') %>
-    <% end %>
-  </h4>
+  <h4><%= link_to(news, news_path(news)) %></h4>
   <%= simple_format(truncate(news.content,
                              length: 140,
                              separator: '',
