--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -18,7 +18,7 @@ $footer-gray: #333;
 
 
 $highlight: 0 1px 0 $white;
-$orange-highlight: #fc9800;
+$orange-highlight: rgba(252, 152, 0, 0.5);
 $green-highlight: #00b819;
 
 // Function definitions
