--- a/app/views/layouts/_admin_dropdown.html.erb
+++ b/app/views/layouts/_admin_dropdown.html.erb
@@ -48,5 +48,10 @@
         <%= link_to t('user.vote_administration'), admin_vote_users_path %>
       </li>
     <% end %>
+    <% if can? :manage, Agenda %>
+      <li class="dropdown-submenu">
+        <%= link_to t('agenda.name'), admin_agendas_path %>
+      </li>
+    <% end %>
   </ul>
 </li>
