--- a/app/views/admin/vote_users/index.html.erb
+++ b/app/views/admin/vote_users/index.html.erb
@@ -3,8 +3,13 @@
 </div>
 
 <div class="col-md-12">
+  <%= link_to t('vote_user.attendance_list'), attendance_list_admin_vote_users_path,
+              class: 'btn primary' %>
   <% if can? :manage, Vote %>
     <%= link_to t('vote.manage'), admin_votes_path, class: 'btn secondary' %>
+  <% end %>
+  <% if can? :manage, Agenda %>
+    <%= link_to t('agenda.manage'), admin_agendas_path, class: 'btn secondary' %>
   <% end %>
   <%= link_to(t('vote_user.make_all_not_present'), all_not_present_admin_vote_users_path,
               method: :patch, class: 'btn secondary',
