--- a/app/views/admin/vote_users/show.html.erb
+++ b/app/views/admin/vote_users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-10 col-md-offset-1 col-sm-12 reg-page">
   <div class="headline">
-    <h2><%= t('vote_user.title') %></h2>
+    <h1><%= model_name(User) %></h1>
   </div>
   <table class="table">
     <tr>
@@ -24,25 +24,12 @@
     </tr>
   </table>
   <div class="headline">
+    <h3><%= models_name(Adjustment) %></h3>
+  </div>
+  <%= render 'adjustments', user: @user %>
+  <div class="headline">
     <h3><%= t('log.title') %></h3>
   </div>
-  <%= grid(@audit_grid) do |grid|
-    grid.column name: t('log.type'), attribute: 'auditable_type', custom_filter: user_filter do |a|
-      Audit.human_attribute_name(a.auditable_type)
-    end
-    grid.column name: t('log.action'), attribute: 'action', filter: false do |a|
-      User.human_attribute_name(a.action)
-    end
-    grid.column name: t('log.change'), attribute: 'audited_changes', filter: false do |a|
-      split_audit_hashes(a.audited_changes, User)
-    end
-    grid.column name: model_name(Vote), attribute: 'vote_id', filter: false do |a|
-      vote_str(@votes, a.vote_id)
-    end
-    grid.column name: t('log.updated_by'), assoc: :updater, attribute: 'firstname', filter: false do |a|
-      a.updater
-    end
-    grid.column name: t('log.date'), attribute: 'created_at', filter: false
-  end -%>
+  <%= render 'log' %>
   <%= link_to t('vote_user.administrate'), admin_vote_users_path, class: 'btn secondary' %>
 </div>
