--- a/app/views/admin/vote_users/show.html.erb
+++ b/app/views/admin/vote_users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-10 col-md-offset-1 col-sm-1+ col-sm-offset-1 reg-page">
+<div class="col-md-10 col-md-offset-1 col-sm-12 reg-page">
   <div class="headline">
     <h2><%= t('vote_user.title') %></h2>
   </div>
@@ -9,12 +9,19 @@
     </tr>
     <tr>
       <td><%= t('vote_user.votecode') %></td>
-      <td><%= @user.votecode %></td>
+      <td>
+        <%= @user.votecode %><br>
+        <%= link_to t('vote_user.reset'), new_votecode_admin_vote_user_path(@user),
+                    method: :patch, data: {confirm: t('vote_user.confirm_reset')} %>
+    </td>
     </tr>
     <tr>
       <td><%= User.human_attribute_name(:presence) %></td>
-      <td><%= yes_no(@user.presence) %></td>
-     </tr>
+      <td>
+        <%= presence_string(@user.presence) %><br>
+        <%= vote_user_state_link(@user) %>
+      </td>
+    </tr>
   </table>
   <div class="headline">
     <h3><%= t('log.title') %></h3>
@@ -37,6 +44,5 @@
     end
     grid.column name: t('log.date'), attribute: 'created_at', filter: false
   end -%>
-  <%= link_to t('vote_user.edit'), edit_admin_vote_user_path(@user), class: 'btn primary' %>
   <%= link_to t('vote_user.administrate'), admin_vote_users_path, class: 'btn secondary' %>
 </div>
