--- a/app/assets/stylesheets/style/forms.scss
+++ b/app/assets/stylesheets/style/forms.scss
@@ -11,3 +11,12 @@
   margin-bottom: 15px;
 }
 
+.form {
+  span {
+    &.error {
+      color: $unify-red;
+      display: inline-block;
+      padding: 10px 0;
+    }
+  }
+}
