--- a/app/views/admin/vote_users/index.html.erb
+++ b/app/views/admin/vote_users/index.html.erb
@@ -17,20 +17,24 @@
 </div>
 
 <div class="col-md-12">
-  <%= grid(@vote_users_grid) do |grid|
+  <%= grid(@vote_users_grid, class: 'adjustment-grid') do |grid|
+    grid.row_attributes do |user|
+      {id: dom_id(user), class: user.presence ? 'present' : 'not-present'}
+    end
     grid.column name: t('attributes.name'), attribute: 'firstname' do |user|
       link_to admin_print_user(user), admin_vote_user_path(user)
     end
-    grid.column name: User.human_attribute_name(:votecode), attribute: 'votecode'
+    grid.column name: User.human_attribute_name(:votecode), attribute: 'votecode',
+      html: {class: 'votecode'}
     grid.column name: User.human_attribute_name(:presence), attribute: 'presence' do |user|
       yes_no(user.presence)
     end
-    grid.column name: t('vote_user.change_state') do |user|
+    grid.column name: t('vote_user.change_state'), html: {class: 'adjust'} do |user|
       vote_user_state_link(user)
     end
-    grid.column name: t('vote_user.reset_votecode') do |user|
+    grid.column name: t('vote_user.reset_votecode'), html: {class: 'votecode-reset'} do |user|
       link_to t('vote_user.reset'), new_votecode_admin_vote_user_path(user),
-                method: :patch, data: {confirm: t('vote_user.confirm_reset')}
+                method: :patch, remote: true,  data: {confirm: t('vote_user.confirm_reset')}
     end
   end -%>
 </div>
