--- a/app/views/layouts/_content.html.erb
+++ b/app/views/layouts/_content.html.erb
@@ -5,13 +5,14 @@
       <%= notice %>
     </div>
   <% end %>
+
   <% if alert %>
     <div class="alert alert-danger fade-in">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
-      <strong><%= t('alert.error') %> </strong> <%= alert %>
-  </div>
-<% end %>
+      <strong><%= t('alert.error') %> </strong>
+      <%= alert %>
+    </div>
+  <% end %>
 
-<%= yield %>
-
+  <%= yield %>
 </div>
