User view: display agendas on start page
Adding a partial for rendering the Agenda on start page
Adding some css to style the Agenda

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -14,6 +14,7 @@
 <% end %>
 
 <div class="col-md-7 col-sm-12">
+  <%= render '/static_pages/agendas', agendas: @start_page.agendas %>
   <%= render @start_page.notices %>
 </div>
 
