--- a/app/assets/stylesheets/style/header.scss
+++ b/app/assets/stylesheets/style/header.scss
@@ -68,6 +68,11 @@
     z-index: 2;
   }
 
+  .navbar-brand-text {
+    font-size: 20px;
+    margin-top: 6px;
+  }
+
   .navbar-right {
     .dropdown-menu {
       right: 0;
