--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
             <%= image_tag("layout/f.svg", id: "logo-header", height: "60") %>
           </div>
           <div class="navbar-brand-text pull-left">
-            <span>&mdash;</span>TEKNOLOGSEKTIONEN<br/>INOM TLTH
+            <span>&mdash;</span>RÖSTSYSTEM
           </div>
         <% end %>
       </div>
