--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,6 @@
 
     <%= render 'layouts/content' %>
 
-    <%= render "layouts/footer" %>
-
-    <%= render "layouts/copyright" %>
+    <%= render 'layouts/copyright' %>
   </body>
 </html>
