--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -1,18 +1,16 @@
-<div class="copyright" id="copyright">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-sm-12">
-        <p class="year">
-        <%= Time.current.year %> &copy; F-teknologsektionen inom TLTH.
-        </p>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <p class="contact">
-        <%= t('footer.control_the_web') %>:
-        <%= render 'contacts/contact', name: 'Spindelmän' %>
-        </p>
-      </div>
-    </div>
-  </div>
+<div class="row copyright" id="copyright">
+  <p>
+    <%= t('footer.developed_at') %>
+    <%= link_to('https://fsektionen.se') do %>
+      <%= image_tag('layout/small_f') %>
+    <% end %>
+    &nbsp;&nbsp;|&nbsp;&nbsp;
+    <%= link_to('https://github.com/fsek/voting', class: 'github') do %>
+      <%= fa_icon('github') %>
+    <% end %>
+    &nbsp;|&nbsp;&nbsp;
+    <%= Time.current.year %>
+    &copy;<%= link_to('Röstsystem.se', 'http://rostsystem.se') %>
+  </p>
 </div>
 
