Adding full image name

--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -2,7 +2,7 @@
   <p>
     <%= t('footer.developed_at') %>
     <%= link_to('https://fsektionen.se') do %>
-      <%= image_tag('layout/small_f') %>
+      <%= image_tag('layout/small_f.png') %>
     <% end %>
     &nbsp;&nbsp;|&nbsp;&nbsp;
     <%= link_to('https://github.com/fsek/voting', class: 'github') do %>
