Card number: turning autocomplete off

--- a/app/views/admin/adjustments/index.html.erb
+++ b/app/views/admin/adjustments/index.html.erb
@@ -26,7 +26,8 @@
   <%= simple_form_for(:vote_user, url: search_admin_vote_users_path, remote: true) do |f| %>
     <%= f.input(:card_number, required: false, autofocus: true,
                 label: User.human_attribute_name(:card_number),
-                input_html: {data: {mask: '9999-9999-9999-9999'}}) %>
+                input_html: {data: {mask: '9999-9999-9999-9999'},
+                             autocomplete: 'off'}) %>
   <% end %>
 
   <p id=adjustment-status>
